[metadata]
name = PySparkIP
version = 1.1.4
author = Julian Shalaby, Ryan Jacobs, Prateek Narayanan
description = An API for working with IP addresses in Apache Spark.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jshalaby510/PySparkIP
project_urls =
    Bug Tracker = https://github.com/jshalaby510/PySparkIP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
ignore = E501,
exclude = .git, __pycache__, build, dist, src/PySparkIP.egg-info